--- a/staRt/www/common-styles/_variables.scss
+++ b/staRt/www/common-styles/_variables.scss
@@ -1,7 +1,44 @@
-$white: #ffffff;
-$light-blue: #c5f3ff;
-$blue: #53c8e9;
-$grey: #4d4d4d;
-$yellow: #ffeccb;
+/*  PALETTE  ============================================== */
 
-$header-type: 50px;
+	$blue-main: #53c8e9;		// primary-c
+	$yellow-main: #FFC95F;		// secondary-c or accent-c
+	$grey-txtMain: #4d4d4d;  		// text-c
+
+	$blue-light: #c5f3ff;		// sky blue
+	$blue-white: #F0F9FC;		// very pale blue. used primarily for container backgrounds
+	$blue-dark: #018B9D;		// dark blue. use: peak lines?
+
+	$yellow-light: #FFECCB;		// sand-light
+	//$brown:;					// sand-dark
+
+	$white: #ffffff;			// white
+
+
+/* LAYOUT ================================================= */
+	// I've applied these to #app-container (height: and width:) to set the dimesnions for for entire app. Styles written for all elements within #app-container will be responsive (% or vw - based) 
+	$appW: 1024px; //100vw; //
+	$appH: 746px; //100vh; //
+	$statusBarH: 22px;
+ 
+	// padding-right: for #app-container & flex-row elements
+	//$elePadding-R: $appW * 0.07;  // 7% of appW
+
+	$rowH: 106px; //$appH / 7; //
+
+
+	$nav-btnW: 100px; //10vw; //
+	$col-pad: 70px; //0.0666vw; //
+	$navW: 170px;  //$nav-btnW + $col-pad; // 16.66% of appW
+
+
+/* MISC STYLES ================================================= */
+
+	/* Type --------------------- */
+	$bold: 600;
+	$header-type: 50px;
+
+	/* Borders --------------------- */
+	$roundBorder: 4px;
+	$itemShadow: 1px 1px 1px rgba(0,0,0,0.15); // box-shadow:
+	$itemShadow-select: 1px 1px 2px rgba(0,0,0,0.25);
+	$itemInset: inset 2px 0px 2px rgba(77, 77, 77, 0.25); //box-shadow:
