--- a/staRt/www/states/root/_root_styles.scss
+++ b/staRt/www/states/root/_root_styles.scss
@@ -1,3 +1,226 @@
+* {
+   margin: 0;
+  padding: 0;
+  outline: none;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: 'Quicksand', 'Helvetica Neue', sans-serif !important;
+  -webkit-user-select: none;
+}
+
+// KEYFRAME ANIMATION BASE  =================================================================
+  // for some reason everything breaks when I move this out of _root_styles. Sorry!
+
+  .animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+  }
+
+  /* 
+    These are here b/c I couldn't get the ng-show, ng-hide, & ng-if to trigger as soon as the class changed. They would stay in the DOM and display other eles and then get cleaned up after ~0.25s 
+  */
+  .animated.ng-enter, 
+  .animate-if.ng-leave {
+    transition: 0s;
+  }
+
+  .animated.ng-enter,
+  .animated.ng-leave.ng-leave-active {
+    display: none;
+  }
+
+  .animated.ng-leave,
+  .animated.ng-enter.ng-enter-active {
+    display: block;
+  }
+
+
+// LAYOUT  =================================================================
+  #app-container {
+    display: -webkit-flex;
+    -webkit-flex-direction: row;
+    line-height: 1.7;
+    height: $appH + $statusBarH;
+    width: $appW;
+    color: $grey-txtMain;
+    border: 0px solid yellow; //#db
+  }
+
+
+  /* unfortunately, I think the correct way to update this is with native code:
+    https://developer.apple.com/reference/uikit/uiviewcontroller#//apple_ref/occ/instm/UIViewController/preferredStatusBarStyle  */
+  #statusBar-bg {
+    height: $statusBarH;
+    width: $appW;
+    background-color: $blue-dark;
+  }
+
+  #nav-and-content-container {
+    display: flex;
+    flex-flow: row nowrap;
+    margin-top: $statusBarH;
+    border: 0px solid red; //#db
+  }
+
+// PAGE HEADER -------------------------------------
+  .bar-header {
+    background-color: $blue-light;
+    height:  14vh !important; //$rowH; //
+    display: flex;
+    align-items: center; // vertical align, but doesn't seem to work in iOS
+    justify-content: space-between;
+    box-shadow: $itemShadow;
+    padding-left: $navW; // #hc make pad vars
+  }
+
+  .bar .title {
+    position: relative;
+    display: block;
+    text-transform: uppercase;
+    color: $blue-main;
+    font-weight: bold;
+    font-size: $header-type;
+    line-height: 0; // this adjusts for weird iOS stuff
+    padding-top: 10px; // also adjusts for weird iOS styling
+    text-align: left;
+    overflow: visible;
+  }
+
+// CONTENT CONTAINER -------------------------------------
+
+  #content-container {
+    display: -webkit-flex;
+    -webkit-flex: 1;
+    -webkit-flex-direction: column;
+    justify-content: flex-start;
+    text-align: center;
+    height: $appH - $rowH;
+    width: $appW - $navW - $col-pad; //#hc this will need to be padding
+    margin-top: $rowH;
+    margin-left: $navW; // #hc this needs to be a var
+    border: 0px solid red; //#db
+  }
+
+  // NEED TO REVIEW --------------------
+    .text-content {
+        padding: 3rem;
+    }
+
+    canvas {
+      background-color: $white;
+    }
+
+    .text-and-lpc {
+      display: -webkit-flex;
+      -webkit-flex: 1;
+      font-size: 1rem;
+      padding: 3rem;
+    }
+
+    .text-and-lpc__text {
+      font-size: 14pt;
+    }
+
+    .pane {
+      flex-flow: column;
+    }
+
+// NAV CONTAINER -------------------------------------
+  // All of the nav icon animations live in  'common-styles/_keyframeAni.scss' 
+
+  #nav-container {
+    display: -webkit-flex;
+    -webkit-flex-direction: column;
+    width: $nav-btnW; //10vw
+    height: $appH;
+    z-index: 999;
+  }
+
+  .nav-container {
+    z-index: 99;
+  }
+
+  .navTabs {
+    height: 100vh;
+    display: -webkit-flex;
+    -webkit-flex: 1;
+    -webkit-flex-direction: column;
+    color: $white;
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+
+  .navTab {
+    display: -webkit-flex;
+    -webkit-flex: 1;
+    background-color: $blue-main;
+    text-align: center;
+    border-radius: $roundBorder;
+    box-shadow: $itemShadow; //1px 0px 2px #d3d3d3;
+    width: $nav-btnW; //100px;
+    padding-top: 10%;
+    padding-bottom: 5%;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    transition: width 0.5s ease-in-out; // #hc animation
+
+    &.active {
+      color: #53C8E9;
+      background-color: $blue-white;
+      box-shadow: $itemShadow-select; //2px 1px 2px #d1d1d1;
+      z-index: 25;
+      width: 110px;
+    }
+  }
+
+  .navTabText {
+    margin: auto;
+  }
+
+  .nav-svg {
+    height: 65px;
+    width: 65px;
+    display: block;
+    margin: 0 auto;
+    padding-bottom: 5px;
+  }
+
+  // .animated.ng-enter, 
+  // .animate-if.ng-leave {
+  //   transition: 0s;
+  // }
+
+  // .animated.ng-enter,
+  // .animated.ng-leave.ng-leave-active {
+  //   display: none;
+  // }
+
+  // .animated.ng-leave,
+  // .animated.ng-enter.ng-enter-active {
+  //   display: block;
+  // }
+
+/*
+
+.bigtext {
+  font-size: 55pt;
+}
+
+.testbutton {
+  background-color: $blue-light;
+}
+
+.testbutton:active {
+  background-color: $blue-dark;
+}
+*/
+
+
+
+
+/*
 *
 {
   font-family: 'Quicksand', 'Helvetica Neue', sans-serif !important;
@@ -146,3 +369,4 @@ canvas {
   margin: 0 auto;
   padding-bottom: 5px;
 }
+*/
